--- a/.env.example
+++ b/.env.example
@@ -20,9 +20,11 @@
 # @see https://console.cal.com
 CALCOM_LICENSE_KEY=
 # ***********************************************************************************************************
+#seMDVByXqfSzarBq
+
 
 # - DATABASE ************************************************************************************************
-DATABASE_URL="postgresql://postgres:@localhost:5450/calendso"
+DATABASE_URL=postgresql://postgres:seMDVByXqfSzarBq@db.jjdrundglkomxxjmjqdu.supabase.co:5432/postgres
 UPSTASH_REDIS_REST_URL=
 UPSTASH_REDIS_REST_TOKEN=
 
@@ -71,7 +73,7 @@ RESERVED_SUBDOMAINS='"app","auth","docs","design","console","go","status","api",
 NEXTAUTH_URL='http://localhost:3000'
 # @see: https://next-auth.js.org/configuration/options#nextauth_secret
 # You can use: `openssl rand -base64 32` to generate one
-NEXTAUTH_SECRET=
+NEXTAUTH_SECRET=Xs+wO7OgGfYAhm0iDQSlhVmYC8wBfJ5H4Y/5qtuUUV0=
 # Used for cross-domain cookie authentication
 NEXTAUTH_COOKIE_DOMAIN=
 
@@ -88,7 +90,7 @@ CRON_ENABLE_APP_SYNC=false
 # Application Key for symmetric encryption and decryption
 # must be 32 bytes for AES256 encryption algorithm
 # You can use: `openssl rand -base64 24` to generate one
-CALENDSO_ENCRYPTION_KEY=
+CALENDSO_ENCRYPTION_KEY=ZEEDF8d5mzicKvtz+0MRFIEp5bl5bi8K
 
 # Intercom Config
 NEXT_PUBLIC_INTERCOM_APP_ID=
